# ai-phone-assistant

./: Dockerfile  docker-compose.yml  pyproject.toml
src/ai_phone_assistant/: main.py
tests/: test_openai.py
