[project]
name = "ai-phone-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex S",email = "ac.official.it@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "twilio (>=9.6.1,<10.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.11.10,<0.12.0)",
    "openai (>=1.82.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ai_phone_assistant", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
